Testing media queries to fix spacing on wide monitors.

--- a/_sass/my-inline.scss
+++ b/_sass/my-inline.scss
@@ -1,10 +1,15 @@
 // Custom styles for Darragh McConville's portfolio
 
 #_main {
-  margin-left: calc(26rem + var(--content-margin-5)) !important;
+  margin-left: calc(22rem + var(--content-margin-5)) !important;
   margin-right: var(--content-margin-5) !important;
-  max-width: calc(100% - 26rem - var(--content-margin-5)) !important;
+  max-width: calc(100% - 22rem - var(--content-margin-5)) !important;
   box-sizing: border-box !important;
+
+  @media (min-width: 1632px) {
+    margin-left: calc(26rem + var(--content-margin-5)) !important;
+    max-width: calc(100% - 29rem - var(--content-margin-5)) !important;
+  }
 }
 
 // Project grid
